# lastpymile

./: .gitignore  LICENSE  README.md  lastpymile.py  pyproject.toml  requirements.txt
lastpymile/: abstractpackageanalysis.py  gitrepository.py  maliciouscodepackageanalyzer.py  pypackage.py  utils.py
test/: test_scanning_a_package.py  test_scanning_an_artifact.py
