[tool.poetry]
name = "lastpymile"
version = "0.1.0"
description = "A reimplementation of LastPyMile: A Python-based library to Identify the differences between build artifacts of PyPI packages and the respective source code repository"
authors = ["vuduclyunitn <ducly.vu@unitn.it>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.9"
certifi = "^2021.10.8"
charset-normalizer = "^2.0.10"
coloredlogs = "^15.0.1"
gitdb = "^4.0.9"
GitPython = "^3.1.25"
humanfriendly = "^10.0"
idna = "^3.3"
lxml = "^4.7.1"
pyreadline3 = "^3.3"
requests = "^2.27.1"
smmap = "^5.0.0"
typing-extensions = "^4.0.1"
urllib3 = "^1.26.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
